# escriba

./: .gitignore  README.rst  pyproject.toml
escriba/: __init__.py  config.py
escriba/daemon/: __init__.py  agent.py  internet_archive.py  scheduler.py  snapshot_job.py  snapshot_job_worker.py  title.py  transfer_job_worker.py  webpage_job_worker.py
escriba/dao/: __init__.py  job.py  snapshot.py  strategy.py  transfer.py  transfer_job.py  webpage.py  webpage_job.py
escriba/dashboard/: __init__.py  view.py
escriba/dashboard/static/: datetime.js  style.css  transfer-table-datetime.js
escriba/dashboard/templates/: base.html  index.html  list.snapshot.html  list.transfer.html  list.webpage.html  transfer.html  webpage.html
escriba/db/: __init__.py  connection.py  schema.sql
escriba/extractor/: archivedotorg.py  title.py  util.py
escriba/messaging/: MDP.py  __init__.py  broker.py  client.py  worker.py
