[build-system]
requires = [
    "setuptools >= 61",  # implement pyproject.toml compatibility
]
build-backend = "setuptools.build_meta"

[project]
name = "escriba"
description = "Easy preservation of web content you care about."
readme = "README.rst"
license = {file = "COPYING"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.11"
version = "0.0.1"
